Cambios en reporte 1

--- a/Proyecto_1/Reportes/reporte_proyecto.tex
+++ b/Proyecto_1/Reportes/reporte_proyecto.tex
@@ -13,6 +13,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{lmodern}
+\usepackage[T1]{fontenc}
+\usepackage{float}
 
 \newtheorem{lma}{Lema}
 \newtheorem{thm}{Teorema}
